--- a/stylish.css
+++ b/stylish.css
@@ -125,3 +125,18 @@ form button {
     border-bottom-right-radius: 15px;
     min-width: 100px;
 }
+/* här nere finns kodar till toDoList boxen*/
+#todoList{
+    display:grid;
+    background-color:#bdbbbe;
+    border-radius:20px;
+    overflow:hidden;
+    padding: 30px;
+
+}
+.todoItem{
+    background-color:blue;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    max-width:100%;
+}
