--- a/stylish.css
+++ b/stylish.css
@@ -23,15 +23,6 @@ form {
     width: 100%;
 }
 
-form {
-    display: flex;
-    font-size: 1.7rem;
-    justify-content: center;
-    margin: 15px 0;
-    padding: 0.8rem;
-    width: 100%;
-}
-
 form input {
     padding: 10px;
     font-size: 17px;
@@ -135,7 +126,10 @@ form button {
 
 }
 .todoItem{
-    background-color:blue;
+    display: flex;
+    padding:7px;
+    background-color:rgb(254, 254, 255);
+    border-radius:10px;
     margin-bottom: 10px;
     margin-top: 10px;
     max-width:100%;
