la till lyssnare på knabbar i li element med funtion till att ta bort och stryckning på input value.

--- a/stylish.css
+++ b/stylish.css
@@ -111,3 +111,7 @@ form button {
     background-color: #747980;
     color: rgb(255, 247, 16);
 }
+.done{
+    text-decoration: line-through;
+    color: rgb(255, 243, 18);
+}
